# IntelligentTA-Using-Multi-Agents

./: .gitignore  README.md  credentials.json  litellm_config.yaml  pyproject.toml  receive_whatsapp.py  requirements.txt  run_schedule_task.py  test_calendar.py  test_whatsapp.py  token.pickle
src/intelligentta/: app.py  crew.py  main.py
src/intelligentta/config/: agents.yaml  tasks.yaml
src/intelligentta/tools/: google_calendar_tool.py  google_calender_tool.py  resume_reader_tool.py  send_whatsapp_tool.py
whatsapp_messages/: msg_2025-04-12T04-47-31.347039.json  msg_2025-04-12T04-54-53.024937.json  msg_2025-04-12T04-55-16.791960.json
