[project]
name = "intelligentta"
version = "0.1.0"
description = "intelligentTA using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0"
]

[project.scripts]
intelligentta = "intelligentta.main:run"
run_crew = "intelligentta.main:run"
train = "intelligentta.main:train"
replay = "intelligentta.main:replay"
test = "intelligentta.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
